Provide better release notes
This includes:
    * Citing the commits after the previous release
    * Providing tag & digest for the base cflinuxfs3 image

[#164326120]

Signed-off-by: Oleksandr Slynko <oslynko@pivotal.io>

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -49,9 +49,12 @@ jobs:
   - task: build eirinifs
     privileged: true
     file: eirinifs/ci/build-eirinifs/task.yml
+  - task: create-release-notes
+    file: eirinifs/ci/create-release-notes/task.yml
   - put: eirinifs-release
     params:
       name: eirinifs-version/version
+      body: release-notes/notes
       tag: eirinifs-version/version
       tag_prefix: v
       globs:
