--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -59,7 +59,54 @@ jobs:
       tag_prefix: v
       globs:
       - go/src/github.com/cloudfoundry-incubator/eirinifs/image/eirinifs.tar
+- name: update-eirini-release
+  on_failure: *on_failure_hook
+  plan:
+  - in_parallel:
+    - get: eirinifs-release
+      trigger: true
+      passed: [ update-eirinifs ]
+    - get: eirini-release
+    - get: ci-resources
+  - task: update-eirinifs-version
+    input_mapping:
+      eirini-release-modified: eirini-release
+    config:
+      platform: linux
+      image_resource:
+        type: docker-image
+        source:
+          repository: eirini/ci
 
+      inputs:
+      - name: ci-resources
+      - name: eirini-release
+      - name: eirinifs-release
+
+      outputs:
+      - name: eirini-release-modified
+
+      run:
+        path: bash
+        args:
+        - -c
+        - |
+          #!/bin/bash
+          set -euo pipefail
+          eirinifs_version=$(cat eirinifs-release/version)
+          pushd eirini-release
+          sed -i "s|  rootfs_version:.*|  rootfs_version: '${eirinifs_version}'|" helm/cf/values.yaml
+          git add "helm/cf/values.yaml"
+          git config --global user.email "eirini@cloudfoundry.org"
+          git config --global user.name "Come-On Eirini"
+          git commit --all --message "update eirinifs version"
+          popd
+
+          cp -r eirini-release/. eirini-release-modified/
+  - put: eirini-release
+    params:
+      merge: true
+      repository: eirini-release-modified
 resource_types:
 - name: slack-notification
   type: docker-image
@@ -103,4 +150,15 @@ resources:
     branch: eirinifs-release-version
     file: version
     private_key: ((github-private-key))
+- name: eirini-release
+  type: git
+  source:
+    uri: git@github.com:cloudfoundry-incubator/eirini-release.git
+    branch: develop
+    private_key: ((eirini-release-private-key))
+- name: ci-resources
+  type: git
+  source:
+    uri: https://github.com/cloudfoundry-incubator/eirini-ci
+    branch: master
 
