Extract build_binaries task and make base image configurable
This will allow the addition of a task to build on a different base
image (e.g. SLE)

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -46,6 +46,9 @@ jobs:
   - put: eirinifs-version
     params:
       file: eirinifs-version/version
+  - task: build binaries
+    privileged: true
+    file: eirinifs/ci/build-binaries/task.yml
   - task: build eirinifs
     privileged: true
     file: eirinifs/ci/build-eirinifs/task.yml
