--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -1,4 +1,5 @@
-FROM cloudfoundry/cflinuxfs3
+ARG baseimage=cloudfoundry/cflinuxfs3
+FROM ${baseimage}
 
 RUN wget -O /usr/local/bin/dumb-init https://github.com/Yelp/dumb-init/releases/download/v1.2.2/dumb-init_1.2.2_amd64
 RUN chmod +x /usr/local/bin/dumb-init
