Add cflinuxfs3 tag to eirinifs release
[#166501581]

Signed-off-by: Michael Schaefer <schaefm61@gmail.com>

--- a/ci/create-release-notes/task.yml
+++ b/ci/create-release-notes/task.yml
@@ -8,7 +8,7 @@ image_resource:
 
 inputs:
 - name: eirinifs
-- name: cflinuxfs3-image
+- name: cflinuxfs3-release
 
 outputs:
 - name: release-notes
