Check release version less often
[#166501581]

Signed-off-by: Michael Schaefer <schaefm61@gmail.com>

--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -180,6 +180,7 @@ resources:
     owner: cloudfoundry
     repository: cflinuxfs3
 - name: eirinifs-release
+  check_every: 2h
   type: github-release
   source:
     owner: cloudfoundry-incubator
