--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -1,4 +1,18 @@
 jobs:
+- name: bump-go-eirini
+  plan:
+  - in_parallel:
+    - get: bump-day
+      trigger: true
+    - get: eirinifs
+    - get: ci-resources
+  - task: bump-go-packages
+    file: ci-resources/tasks/bump-go-packages/task.yml
+    input_mapping:
+      repository: eirinifs
+  - put: eirinifs
+    params:
+      repository: repository-updated
 - name: bump-cflinuxfs3
   plan:
   - in_parallel:
@@ -213,3 +227,9 @@ resources:
     tag: test-multi-stage
     username: ((dockerhub-user))
     password: ((dockerhub-password))
+- name: bump-day
+  type: time
+  source:
+    start: 12:00 AM
+    stop: 1:00 AM
+    days: [Sunday]
